@@ -1,3 +1,7 @@
+May 17, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- abort configure if gdk-pixbuf is not installed
+- adapt spec file
+
 May 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - Pass RCON password on command line when launching Half-Life. Thanks Andreas
   Schneider for reporting.
